# ray_tracing

./: .gitignore
1/: CMakeLists.txt
1/include/: camera.hpp  histable_list.hpp  hitable.hpp  ray.hpp  sphere.hpp  util.hpp  vec3.hpp
1/include/materials/: dielectric.hpp  lambertian.hpp  metal.hpp
1/src/: camera_test.cpp  dielectric_test.cpp  diffuse_test.cpp  final_test.cpp  focus_test.cpp  material_test.cpp  ray_test.cpp  simple_test.cpp  sphere_test.cpp  world_test.cpp
2/: CMakeLists.txt
2/include/: aabb.hpp  camera.hpp  hitable.hpp  material.hpp  perlin.hpp  ray.hpp  stb_image.hpp  texture.hpp  util.hpp  vec3.hpp
2/include/hitables/: box.hpp  bvh_node.hpp  exchange.hpp  flip_normals.hpp  hitable_list.hpp  medium.hpp  moving_sphere.hpp  rectangle.hpp  sphere.hpp
2/include/materials/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  metal.hpp
2/include/textures/: checker_texture.hpp  constant_texture.hpp  image_texture.hpp  noise_texture.hpp
2/src/: box_test.cpp  cornell_test.cpp  earth_test.cpp  exchange_test.cpp  final_test.cpp  final_test_pthread.cpp  final_test_pthread_write.cpp  light_test.cpp  medium_test.cpp  motion_test.cpp  noise_test.cpp  scale_test.cpp  texture_test.cpp  turb_test.cpp
